# plotingZ

./: .bazelrc  .clang-format  .clang-tidy  README.md  WORKSPACE  appveyor.yml  plotingZ.bazelproject
.clion_targets/: linux_build_debug.xml  linux_build_release.xml  linux_run_debug.xml  linux_run_release.xml  windows_build_debug.xml  windows_build_release.xml  windows_run_debug.xml  windows_run_release.xml
.github/workflows/: git_ci.yml
Plot/: BUILD.bazel  main.cpp  main_run.cpp  test.cpp
Plot/Common/: BUILD.bazel
Plot/Common/src/: axis.cpp  axis.h  config.h  legend.cpp  legend.h  math_utility.cpp  math_utility.h  plotting_data.cpp  plotting_data.h  plotting_data_builder.cpp  plotting_data_builder.h  types.h
Plot/Common/test/: axis_test.cpp  legend_test.cpp  math_utility.cpp  plotting_data_builder_test.cpp
Plot/Fonts/: BUILD.bazel
Plot/LinePlot/: BUILD.bazel
Plot/LinePlot/src/: line_plot.cpp  line_plot.h
Plot/LinePlot/test/: line_plot_test.cpp
Plot/Main/: BUILD.bazel
Plot/Main/src/: main.cpp  main.h
Plot/Main/test/: main_test.cpp
Plot/Plots/: BUILD.bazel
Plot/Plots/src/: line_plot.cpp  line_plot.h  scatter_plot.cpp
Plot/Plots/test/: line_plot_test.cpp  scatter_plot_test.cpp
Plot/ScatterPlot/: BUILD.bazel
Plot/ScatterPlot/src/: scatter_plot.cpp  scatter_plot.h
Plot/ScatterPlot/test/: scatter_plot_test.cpp
Plot/Utility/: BUILD.bazel
Plot/Utility/src/: convert_utility.cpp  convert_utility.h  input_data_utility.cpp  input_data_utility.h  math_utility.cpp  math_utility.h
Plot/Utility/test/: convert_utility_test.cpp  input_data_utility_test.cpp  math_utility.cpp  math_utility_test.cpp
Tools/LLDB9/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _distutils_findvs.pyd  _elementtree.pyd  _hashlib.pyd  _lzma.pyd  _msi.pyd  _multiprocessing.pyd  _overlapped.pyd  _socket.pyd  _sqlite3.pyd  _ssl.pyd  pyexpat.pyd  python36._pth  select.pyd  unicodedata.pyd  winsound.pyd
