load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "config",
    srcs = ["src/config.h"],
    linkopts = [
        "-lsfml-graphics",
        "-lsfml-window",
        "-lsfml-system",
        "-lsfml-network",
        "-lsfml-audio",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "axis",
    srcs = ["src/axis.cpp"],
    hdrs = ["src/axis.h"],
    data = ["//Plot/Fonts:fonts"],
    visibility = ["//visibility:public"],
    deps = [
        ":config",
        ":plotting_data",
    ],
)

cc_library(
    name = "legend",
    srcs = ["src/legend.cpp"],
    hdrs = ["src/legend.h"],
    data = ["//Plot/Fonts:fonts"],
    visibility = ["//visibility:public"],
    deps = [
        ":config",
        ":plotting_data",
        ":types",
        "@fmtlib//:fmt",
    ],
)

cc_library(
    name = "plotting_data",
    srcs = ["src/plotting_data.cpp"],
    hdrs = ["src/plotting_data.h"],
    data = ["//Plot/Fonts:fonts"],
    visibility = ["//visibility:public"],
    deps = [
        ":config",
    ],
)

cc_library(
    name = "types",
    srcs = ["src/types.h"],
    hdrs = ["src/types.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@fmtlib//:fmt",
    ],
)

cc_test(
    name = "axis_test",
    timeout = "short",
    srcs = ["test/axis_test.cpp"],
    deps = [
        ":axis",
        "@fmtlib//:fmt",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "legend_test",
    timeout = "short",
    srcs = ["test/legend_test.cpp"],
    deps = [
        ":legend",
        "@googletest//:gtest",
    ],
)
