load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "main",
    srcs = ["src/main.cpp"],
    hdrs = ["src/main.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//Plot/Common:axis",
        "//Plot/Common:config",
        "//Plot/Common:legend",
        "//Plot/Common:plotting_data",
        "//Plot/Common:types",
        "//Plot/Plots:line_plot",
        "//Plot/Plots:scatter_plot",
        "@fmtlib//:fmt",
    ],
)

cc_test(
    name = "main_test",
    srcs = ["test/main_test.cpp"],
    deps = [
        ":main",
        "@googletest//:gtest",
    ],
)
