load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "scatter_plot",
    srcs = ["src/scatter_plot.cpp"],
    hdrs = ["src/scatter_plot.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//Plot/Common:axis",
        "//Plot/Common:config",
        "//Plot/Common:plotting_data",
        "//Plot/Common:types",
    ],
)

cc_test(
    name = "scatter_plot_test",
    srcs = ["test/scatter_plot_test.cpp"],
    deps = [
        ":scatter_plot",
        "@fmtlib//:fmt",
        "@googletest//:gtest",
    ],
)
